--- a/src/main/resources/templates/bookdetail.html
+++ b/src/main/resources/templates/bookdetail.html
@@ -66,7 +66,7 @@
                 </form>
                  <form th:action="@{/rate/}+${bookdetail.bookid}" method="get" th:if="${session.loginUser!=null&&isRate==null}">
                     <input id="input-id" type="number" class="rating my-3" min=1 max=10 step=1 data-size="lg" name="rate"/>
-                     <button type="submit" class="btn btn-sm my-3" >评分</button>
+                     <button type="submit" class="btn btn-secondary my-3" >评分</button>
                   </form>
                 <h3 th:if="${isRate!=null} " class="py-3" th:text="'您的评分为：'+${isRate.rating}+'分'"></h3>
                 <form th:action="@{/main/}+${bookdetail.bookid}" method="post" th:if="${session.loginUser!=null&&isRate!=null}">
@@ -78,6 +78,28 @@
     </div>
 </section>
 <!--图书明细-->
+
+<section id="comments" class="py-3">
+    <h1 class="text-center mb-3">评论区</h1>
+    <div class="container px-3 bg-light">
+        <div class="mb-2 row" th:if="${comments!=null}">
+            <div th:each="comment:${comments}">
+                <h5 th:text="'由用户id:'+${comment.userid}+'发表于'+${comment.datetime}"></h5>
+                <p th:text="${comment.content}"></p>
+            </div>
+        </div>
+    </div>
+
+        <h2 th:if="${comments==null}" class="text-center py-3"> 暂时还没有评论！</h2>
+
+    <form th:action="@{/main/}+${bookdetail.bookid}" method="post" th:if="${session.loginUser!=null}">
+        <div class="form-group mx-5 my-5">
+            <label for="Textarea1" th:align="right">不如也发表一下您的看法：</label>
+                <textarea name="content" class="form-control" id="Textarea1" rows="3" placeholder="请限制在300字以内！"></textarea>
+                <button type="submit" class="btn btn-primary my-3" th:align="right">提交评论</button>
+        </div>
+    </form>
+</section>
 
 <!--根据项目推荐模块-->
 <section id="book_cf" class="bg-light">
